@@ -1,5 +1,11 @@
 2005-04-04  Davyd Madeley  <davyd@madeley.id.au>
 
+        * applet.c: (gnome_volume_applet_toggle_mute),
+        (gnome_volume_applet_refresh), (cb_ui_event):
+          Fix for mute misbehaviour. Backported from HEAD.
+
+2005-04-04  Davyd Madeley  <davyd@madeley.id.au>
+
         * preferences.c: (gnome_volume_applet_preferences_init):
           Fix type-ahead bug (#171367). Backported from HEAD.
 
